# RKNHardering

./: .gitattributes  .gitignore  AGENTS.md  README.md  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: предложения.md
.github/workflows/: ci.yml  release.yml  tmp-export-docs.yml
.translation-input/: input_docs.small00.b64  translate_nllb.py  translate_plain.py
.translation-input/en/: beta.md  index.md  lab.md  local-signals.md  network-path.md  profiles.md  root-integrity.md  root-vpnhide.md  threat-model.md
.translation-input/ru/: beta.md  matrix.md.part00  matrix.md.part01  matrix.md.part02  matrix.md.part03a  matrix.md.part03b  matrix.md.part04  sources.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: call_transport_targets_telegram.json  marketplace_pubkey.hex
app/src/main/cpp/: CMakeLists.txt  native_curl_probe.cpp  native_curl_probe.h  native_signs_probe.cpp  native_signs_probe.h
app/src/main/res/drawable/: bg_badge_official.xml  bg_category_body.xml  bg_category_header_collapsed.xml  bg_category_header_expanded.xml  bg_checker_icon_token.xml  bg_checker_section_collapsed.xml  bg_checker_section_expanded.xml  bg_disabled_note.xml  bg_discover_card.xml  bg_endpoint_pill.xml  bg_inline_editor.xml  bg_inline_mapping_row.xml  bg_inline_response_viewer.xml  bg_marketplace_avatar.xml  bg_profile_active_border.xml  bg_profile_avatar_builtin.xml  bg_radio_circle_inactive.xml  bg_verdict_action_button.xml  bg_warning_url_block.xml  ic_accessibility.xml  ic_add_circle.xml  ic_call.xml  ic_call_split.xml  ic_check_white_small.xml  ic_clone.xml  ic_compare_arrows.xml  ic_file_export.xml  ic_file_import.xml  ic_lan.xml  ic_location_on.xml  ic_network_check.xml  ic_public.xml  ic_search.xml  ic_security.xml  ic_store.xml  ic_telegram.xml  ic_tune.xml  ic_verified_blue.xml  ic_verified_grey.xml  ic_warning_amber.xml  (+1 more)
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  fragment_marketplace_install.xml  fragment_settings_about.xml  fragment_settings_accessibility.xml  fragment_settings_appearance.xml  fragment_settings_categories.xml  fragment_settings_custom_check_editor.xml  fragment_settings_custom_checks.xml  fragment_settings_dns.xml  fragment_settings_marketplace.xml  fragment_settings_network.xml  fragment_settings_privacy.xml  (+25 more)
docs/: README.en.md  README.fa.md  README.zh-CN.md
docs/superpowers/plans/: 2026-04-09-settings.md
docs/superpowers/specs/: 2026-04-09-settings-design.md
fastlane/metadata/android/fa/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
marketplace/: CONTRIBUTING.md  catalog.json  catalog.sig
marketplace/checks/: extended-test.rkncheck  full-scan.rkncheck  mtproxy-tg-stun-check.rkncheck  quick-scan.rkncheck  stealth-check.rkncheck
xray-protos/: build.gradle.kts
(+283 files in other folders)
